// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toCondensedCheck condenses checks across location 1`] = `
Array [
  Object {
    "childStatuses": Array [
      Object {
        "ip": "192.178.123.21",
        "status": "up",
      },
      Object {
        "ip": "192.178.123.22",
        "status": "down",
      },
      Object {
        "ip": "192.178.123.23",
        "status": "up",
      },
    ],
    "location": "us-east-1",
    "status": "mixed",
    "timestamp": "124",
  },
]
`;

exports[`toCondensedCheck creates the correct number of condensed checks for multiple locations 1`] = `
Array [
  Object {
    "childStatuses": Array [
      Object {
        "ip": "192.178.123.21",
        "status": "up",
      },
      Object {
        "ip": "192.178.123.22",
        "status": "down",
      },
      Object {
        "ip": "192.178.123.23",
        "status": "up",
      },
    ],
    "location": "us-east-1",
    "status": "mixed",
    "timestamp": "124",
  },
  Object {
    "childStatuses": Array [
      Object {
        "ip": "192.178.123.21",
        "status": "up",
      },
      Object {
        "ip": "192.178.123.22",
        "status": "down",
      },
      Object {
        "ip": "192.178.123.23",
        "status": "up",
      },
    ],
    "location": "us-west-1",
    "status": "mixed",
    "timestamp": "132",
  },
]
`;

exports[`toCondensedCheck infers an "up" status for a series of "up" checks 1`] = `
Array [
  Object {
    "childStatuses": Array [
      Object {
        "ip": "192.178.123.21",
        "status": "up",
      },
      Object {
        "ip": "192.178.123.22",
        "status": "up",
      },
      Object {
        "ip": "192.178.123.23",
        "status": "up",
      },
    ],
    "location": "us-east-1",
    "status": "up",
    "timestamp": "124",
  },
]
`;
